# taxi_demand_predictor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  training_pipeline.yaml
notebooks/: 01_load_and_validate_row_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_feature_and_target.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_eng.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_features_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: backfill_feature_group.py  backfill_inference.py  feature_pipeline.py  training_pipeline.py
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_monitoring.py  frontend_production.py  inference.py  model.py  model_registry_api.py  monitoring.py  paths.py  plot.py
