[project]
name = "taxi_demand"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif",email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "requests (>=2.34.2,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "src", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
