[project]
name = "taxi_demand"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif",email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "requests (>=2.34.2,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "plotly>=6.8.0",
    "scikit-learn (>=1.9.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "src", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
