[project]
name = "taxi_demand"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif",email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jupyter>=1.0.0",
    "requests (>=2.34.2,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "plotly>=6.8.0",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "xgboost (<3.3.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=2.2,<3.0)",
    "hopsworks (>=5.0.0,<6.0.0)",
    "delta-spark (>=4.3.0,<5.0.0)",
    "confluent-kafka (>=2.14.2,<3.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "loguru>=0.7.3",
    "retry>=0.9.2",
    "comet-ml>=3.58.3",
    "fire>=0.7.1",
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
